bebytes/tests/compile_time/enums/data_variants.stderr
error[E0308]: mismatched types
  --> tests/compile_time/enums/data_variants.rs:6:10

error[E0533]: expected value, found struct variant `Self::Struct`
 --> tests/compile_time/enums/data_variants.rs:6:10

error[E0308]: mismatched types
  --> tests/compile_time/enums/data_variants.rs:6:10

error[E0533]: expected unit struct, unit variant or constant, found tuple variant `Self::Tuple`
 --> tests/compile_time/enums/data_variants.rs:6:10

error[E0533]: expected unit struct, unit variant or constant, found struct variant `Self::Struct`
 --> tests/compile_time/enums/data_variants.rs:6:10